--- a/work.css
+++ b/work.css
@@ -4,104 +4,120 @@
     box-sizing: border-box;
     font-family: 'Shabnam', sans-serif;
     direction: rtl;
+    background-color: #929292;
 }
+div{
+text-align: center;
+    margin-top: 20rem;
+}
+div span{
 
-.header {
-    width: 100%;
-    height: 7rem;
-    background: black;
-    color: white;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.head {
-    padding-top: 15px;
-    line-height: 35px;
-}
-
-.head div a img {
-    position: relative;
-    width: 9rem;
-    height: 103px;
-    top: -5rem;
-    right: 15rem;
-    border-radius: 20px;
-}
-
-.navbar {
-    width: 100%;
-    height: 3rem;
-    background: rgba(42, 42, 42, 0.98);
-    padding: 10px 10rem 10px 0;
-    justify-content: space-around;
-}
-
-.navbar .menubar {
-    display: flex;
-    align-items: center;
-    list-style: none;
-}
-
-.navbar .menubar li {
-    padding-left: 3rem;
-}
-
-.navbar .menubar li a {
-    text-decoration: none;
-    color: white;
-    font-size: 13px;
-    display: inline-block;
-    cursor: pointer;
-    padding-bottom: 13px;
-}
-
-.navbar .menubar li a:hover {
-    color: #F3CF00;
-    transition: 0.1s;
-}
-.navbar .menubar .menubar-abut a{
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-}
-.navbar .menubar .menubar-abut a .icon{
-    text-decoration: none;
-    display: flex;
-    cursor: pointer;
-    color: white;
-    border: 2px solid;
-    font-size: 15px;
-    width: 30px;
-    height:30px;
-    border-radius: 50%;
-    padding-top: 7px;
-    justify-content: center;
-    margin-bottom: -22px ;
-}
-.menubar-abut{
-    opacity:0;
-}
-.navbar .menubar .menubar-abut a .icofont-instagram:hover {
-    background: linear-gradient(129deg, rgba(69, 61, 185, 1) 11%, rgba(255, 0, 0, 1) 51%, rgba(252, 176, 69, 1) 88%);
-}
-
-.navbar .menubar .menubar-abut a  .icofont-twitter:hover {
-    background-color: #00C3DA;
-}
-.navbar .menubar .menubar-abut a img:hover {
-    background-color: rgb(9, 0, 49);
-}
-.navbar  .menubar .btn-back-menu a .icofont-caret-right{
     font-size: 25px;
-    position: absolute;
-    top: 8rem;
+    font-weight: bold;
 }
-.navbar .menubar .menubar-abut a img{
-    width:19px;
-    height: 19px;
+div span img{
+    transform: translate(0 , 9px);
+    width: 2rem;
+    height: 2rem;
 }
-.navbar .menubar .menubar-abut a .img {
-    padding: 0;
-}
+
+/*.header {*/
+/*    width: 100%;*/
+/*    height: 7rem;*/
+/*    background: black;*/
+/*    color: white;*/
+/*    text-align: center;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*}*/
+
+/*.head {*/
+/*    padding-top: 15px;*/
+/*    line-height: 35px;*/
+/*}*/
+
+/*.head div a img {*/
+/*    position: relative;*/
+/*    width: 9rem;*/
+/*    height: 103px;*/
+/*    top: -5rem;*/
+/*    right: 15rem;*/
+/*    border-radius: 20px;*/
+/*}*/
+
+/*.navbar {*/
+/*    width: 100%;*/
+/*    height: 3rem;*/
+/*    background: rgba(42, 42, 42, 0.98);*/
+/*    padding: 10px 10rem 10px 0;*/
+/*    justify-content: space-around;*/
+/*}*/
+
+/*.navbar .menubar {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    list-style: none;*/
+/*}*/
+
+/*.navbar .menubar li {*/
+/*    padding-left: 3rem;*/
+/*}*/
+
+/*.navbar .menubar li a {*/
+/*    text-decoration: none;*/
+/*    color: white;*/
+/*    font-size: 13px;*/
+/*    display: inline-block;*/
+/*    cursor: pointer;*/
+/*    padding-bottom: 13px;*/
+/*}*/
+
+/*.navbar .menubar li a:hover {*/
+/*    color: #F3CF00;*/
+/*    transition: 0.1s;*/
+/*}*/
+/*.navbar .menubar .menubar-abut a{*/
+/*    text-decoration: none;*/
+/*    display: inline-block;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.navbar .menubar .menubar-abut a .icon{*/
+/*    text-decoration: none;*/
+/*    display: flex;*/
+/*    cursor: pointer;*/
+/*    color: white;*/
+/*    border: 2px solid;*/
+/*    font-size: 15px;*/
+/*    width: 30px;*/
+/*    height:30px;*/
+/*    border-radius: 50%;*/
+/*    padding-top: 7px;*/
+/*    justify-content: center;*/
+/*    margin-bottom: -22px ;*/
+/*}*/
+/*.menubar-abut {*/
+/*    opacity: 0;*/
+/*    display: none;*/
+/*}*/
+/*.navbar .menubar .menubar-abut a .icofont-instagram:hover {*/
+/*    background: linear-gradient(129deg, rgba(69, 61, 185, 1) 11%, rgba(255, 0, 0, 1) 51%, rgba(252, 176, 69, 1) 88%);*/
+/*}*/
+
+/*.navbar .menubar .menubar-abut a  .icofont-twitter:hover {*/
+/*    background-color: #00C3DA;*/
+/*}*/
+/*.navbar .menubar .menubar-abut a img:hover {*/
+/*    background-color: rgb(9, 0, 49);*/
+/*}*/
+/*.navbar  .menubar .btn-back-menu a .icofont-caret-right{*/
+/*    font-size: 25px;*/
+/*    position: absolute;*/
+/*    top: 8rem;*/
+/*}*/
+/*.navbar .menubar .menubar-abut a img{*/
+/*    width:19px;*/
+/*    height: 19px;*/
+/*}*/
+/*.navbar .menubar .menubar-abut a .img {*/
+/*    padding: 0;*/
+/*}*/
